# cdot65.scm

./: .ansible-lint  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .windsurfrules  ANSIBLE_PLAYBOOK_STYLING_GUIDE.md  CLAUDE.md  CLAUDE_MODELS.md  COLLECTION_STYLING_GUIDE.md  DEVELOPMENT_TODO.md  Makefile  PRD.md  README.md  TODO.md  WINDSURF_RULES.md  ansible.cfg  docker-compose.yml  galaxy.yml  pyproject.toml  test-requirements.txt  tox.ini
.github/workflows/: pr-agent.yaml
ansible_collections/cdot65/scm/: .ansible-lint  CLAUDE.md  CONTRIBUTING.md  FILES.json  MANIFEST.json  pyproject.toml
ansible_collections/cdot65/scm/examples/: address_info.yml
collections/ansible_collections/cdot65/scm/: .claude  .cursorrules  .flake8  .github  .gitignore  .idea  .pr_agent.toml  .pre-commit-config.yaml  .pylintrc  .pytest_cache  .ruff_cache  .tox  docs  (+21 more)
docker/: .dockerignore  Dockerfile
docs/examples/: folder_management.yml
examples/: address.yml  address_group.yml  address_group_info.yml  address_info.yml  anti_spyware_profile.yml  anti_spyware_profile_info.yml  application.yml  application_filter.yml  application_filter_info.yml  application_group.yml  application_group_info.yml  auth.yml  bandwidth_allocation.yml  bandwidth_allocation_cleanup.yml  bandwidth_allocation_info.yml  bgp_routing.yml  decryption_profile_info.yml  device_info.yml  dns_security_profile.yml  dns_security_profile_info.yml  dns_security_profiles_export.json  dynamic_user_group.yml  dynamic_user_group_info.yml  external_dynamic_list.yml  external_dynamic_list_info.yml  folder.yml  folder_info.yml  hip_object.yml  hip_object_info.yml  hip_profile.yml  hip_profile_info.yml  http_server_profile.yml  http_server_profile_info.yml  ike_crypto_profile.yml  ike_gateway.yml  internal_dns_server.yml  internal_dns_server_info.yml  internal_dns_servers_export.json  ipsec_crypto_profile.yml  label.yml  (+36 more)
meta/: runtime.yml
playbooks/: auth.yml  auth_role_example.yml
plugins/module_utils/: __init__.py  client.py  scm.py
plugins/module_utils/stubs/: client.pyi
plugins/modules/: address.py  address_group.py  address_group_info.py  address_info.py  anti_spyware_profile.py  anti_spyware_profile_info.py  application.py  application_filter.py  application_filter_info.py  application_group.py  application_group_info.py  application_info.py  auth.py  bandwidth_allocation.py  bandwidth_allocation_info.py  bgp_routing.py  bgp_routing_info.py  decryption_profile.py  decryption_profile_info.py  device_info.py  dns_security_profile.py  dns_security_profile_info.py  dynamic_user_group.py  dynamic_user_group_info.py  external_dynamic_list.py  external_dynamic_list_info.py  folder.py  folder_info.py  hip_object.py  hip_object_info.py  hip_profile.py  hip_profile_info.py  http_server_profile.py  http_server_profile_info.py  ike_crypto_profile.py  ike_crypto_profile_info.py  ike_gateway.py  ike_gateway_info.py  internal_dns_server.py  internal_dns_server_info.py  (+44 more)
roles/auth/: README.md
roles/auth/defaults/: main.yml
roles/auth/tasks/: main.yml
scripts/: fix_utils_lints.sh  lint_and_format.sh
tests/sanity/: ignore-2.18.txt  ignore-2.19.txt
tests/utils/: build_collection.py  collection_prep.py  integration_prep.py  sanity_prep.py
(+49 files in other folders)
