[project]
name = "cdot65-scm"
version = "0.1.0"
description = ""
authors = [
    {name = "cdot65",email = "calvin@cdot.io"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "cdot65"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
